--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-calendar": "^5.1.0",
     "react-date-picker": "^11.0.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
